# qwen-tts-server

./: .gitignore  README.md  install.sh  pyproject.toml  qwen_tts_server.py  requirements.txt  start.sh
homebrew/: qwen-tts.rb
